--- a/app/src/main/res/layout/activity_add_task.xml
+++ b/app/src/main/res/layout/activity_add_task.xml
@@ -8,11 +8,12 @@
     tools:context=".AddTaskActivity">
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/etTitle"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/etTitle"
+
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Title" />
@@ -21,13 +22,13 @@
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:hint="Subject">
+       >
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/etSubject"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="hint" />
+            android:hint="Subject" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <SeekBar
